added Main.java and added some log to know what is happening.